Apply micro-improvements and make TO members final
* Use LinkedList only where it actually is required / makes sense /
  provides a performance benefit. Where it doesn't, stick to ArrayList.
* Where we don't care about the actual list, set or map implementation,
  use List.of(), Set.of() or Map.of().
* Make members for CreationTO and its subclasses final.
* Mark LoadHandlingDevice's copy constructor, which is now not used by
  VehicleProcessModel.setVehicleLoadHandlingDevices() any more and which
  is superfluous for LoadHandlingDevice as an immutable class, as
  deprecated.

Merged-by: Martin Grzenia <martin.grzenia@iml.fraunhofer.de>