@@ -9,11 +9,9 @@ package org.opentcs.strategies.basic.dispatching.phase.assignment.priorization;
 
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -46,7 +44,7 @@ public class CompositeOrderComparatorTest {
   public void sortNamesUpForOtherwiseEqualInstances() {
 
     Mockito.when(configuration.orderPriorities())
-        .thenReturn(new LinkedList<>());
+        .thenReturn(List.of());
     comparator = new CompositeOrderComparator(configuration, availableComparators);
 
     TransportOrder candidate1 = new TransportOrder("AA", new ArrayList<>());
@@ -68,7 +66,7 @@ public class CompositeOrderComparatorTest {
   @Test
   public void sortsByAgeAndName() {
     Mockito.when(configuration.orderPriorities())
-        .thenReturn(new LinkedList<>());
+        .thenReturn(List.of());
     comparator = new CompositeOrderComparator(configuration, availableComparators);
     
     Instant creationTime = Instant.now();
@@ -92,7 +90,7 @@ public class CompositeOrderComparatorTest {
   public void sortsByAgeAndNameAndDeadline() {
     String deadlineKey = "BY_DEADLINE";
     Mockito.when(configuration.orderPriorities())
-        .thenReturn(Arrays.asList(deadlineKey));
+        .thenReturn(List.of(deadlineKey));
     availableComparators.put(deadlineKey,
                              new TransportOrderComparatorByDeadline());
 
