@@ -12,7 +12,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -50,7 +49,7 @@ public class CompositeVehicleCandidateComparatorTest {
   public void sortNamesUpForOtherwiseEqualInstances() {
 
     Mockito.when(configuration.vehicleCandidatePriorities())
-        .thenReturn(new LinkedList<>());
+        .thenReturn(List.of());
     comparator = new CompositeVehicleCandidateComparator(configuration, availableComparators);
 
     AssignmentCandidate candidate1 = candidateWithName("AA");
@@ -72,7 +71,7 @@ public class CompositeVehicleCandidateComparatorTest {
   @Test
   public void sortsByNameAndEnergylevel() {
     Mockito.when(configuration.vehicleCandidatePriorities())
-        .thenReturn(new LinkedList<>());
+        .thenReturn(List.of());
     comparator = new CompositeVehicleCandidateComparator(configuration, availableComparators);
 
     AssignmentCandidate candidate1 = candidateWithNameEnergylevel("AA", 1);
@@ -95,7 +94,7 @@ public class CompositeVehicleCandidateComparatorTest {
   public void sortsByNameAndRoutingCostAndEnergyLevel() {
     String initRoutingCostKey = "BY_INITIAL_ROUTING_COSTS";
     Mockito.when(configuration.vehicleCandidatePriorities())
-        .thenReturn(Arrays.asList(initRoutingCostKey));
+        .thenReturn(List.of(initRoutingCostKey));
     availableComparators.put(initRoutingCostKey,
                              new CandidateComparatorByInitialRoutingCosts());
 
@@ -148,9 +147,10 @@ public class CompositeVehicleCandidateComparatorTest {
     Route.Step dummyStep
         = new Route.Step(null, null, new Point("Point1"), Vehicle.Orientation.FORWARD, 1);
     Route route = new Route(Arrays.asList(dummyStep), routingCost);
-    List<DriveOrder> driveOrders = new LinkedList<>();
-    driveOrders.add(new DriveOrder(new DriveOrder.Destination(new Point("Point2").getReference()))
-        .withRoute(route));
+    List<DriveOrder> driveOrders = List.of(
+        new DriveOrder(new DriveOrder.Destination(new Point("Point2").getReference()))
+            .withRoute(route)
+    );
     return driveOrders;
   }
 
